# custom-ai-notetaker

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  DIARIZATION_GUIDE.md  README.md  SECURITY.md  SETUP.md  WASAPI_IMPLEMENTATION.md  WASAPI_INTEGRATION.md  summary_20250912_221653.txt  transcript_20250912_152706.txt
source/: record_audio.cpp
src/: main.cpp  record.cpp  summarize.cpp  transcription_and_diarization.cpp
